fixed nav bar spacing and text alignment

--- a/website/frontend/styles/lots.module.css
+++ b/website/frontend/styles/lots.module.css
@@ -1,13 +1,23 @@
 /* navbar background and positioning*/
 .navbar {
     overflow: auto;
-    margin-left: 70px;
+    margin-left: 0px;
     background-color: #0004ff;
     color: white;
     position: fixed;
     width: 100%;
-    height: 50px;
+    height: 55px;
     float: auto;
+    text-align: center;
+}
+
+.vertical {
+    border-left: 6px;
+    background-color: red;
+}
+
+.text {
+    margin-left: 65px;
 }
 
 /* navbar title */
