--- a/website/frontend/styles/stats.module.css
+++ b/website/frontend/styles/stats.module.css
@@ -1,6 +1,6 @@
 .chart {
     overflow: auto;
-    margin-left: 100px;
+    margin-left: 70px;
     padding-top: 40px;
 }
 
